--- a/docs/_includes/themes/zeppelin/_navigation.html
+++ b/docs/_includes/themes/zeppelin/_navigation.html
@@ -59,6 +59,7 @@
                 <li role="separator" class="divider"></li>
                 <li class="title"><span>Other Features</span></li>
                 <li><a href="{{BASE_PATH}}/usage/other_features/publishing_paragraphs.html">Publishing Paragraphs</a></li>
+                <li><a href="{{BASE_PATH}}/usage/other_features/notebook_snapshot.html">Notebook Snapshot</a></li>
                 <li><a href="{{BASE_PATH}}/usage/other_features/personalized_mode.html">Personalized Mode</a></li>
                 <li><a href="{{BASE_PATH}}/usage/other_features/customizing_homepage.html">Customizing Zeppelin Homepage</a></li>
                 <li><a href="{{BASE_PATH}}/usage/other_features/notebook_actions.html">Notebook Actions</a></li>
