--- a/zeppelin-web/src/app/notebook/notebook.html
+++ b/zeppelin-web/src/app/notebook/notebook.html
@@ -80,8 +80,8 @@ limitations under the License.
     <hr />
     <div>
       <p>
-        Enter comma separated users and groups in the fields. <br />
-        Empty field (*) implies anyone can do the operation.
+        Enter comma separated users/roles in the fields.<br />
+        Empty field implies no restrictions.
       </p>
       <div class="permissionsForm"
            data-ng-model="permissions">
