[Zeppelin 3388] Refactor documentation for ZeppelinContext
### What is this PR for?
This PR is a refactoring of the `ZepplinContext` documentation.

The description of `ZepplinContext` is now almost entirely contained within the _Spark_ interpreter's documentation ([spark.md](https://github.com/apache/zeppelin/blob/master/docs/interpreter/spark.md)). But `ZepplinContext` has many generic features that are available to all interpreters, and it is important for `ZepplinContext` to have a more visible and independent presence in the Zeppelin documentation.

### What type of PR is it?
[Documentation]

### Todos

### What is the Jira issue?
https://issues.apache.org/jira/browse/ZEPPELIN-3388

### How should this be tested?
Only documentation.

### Screenshots (if appropriate)

### Questions:
* Does the licenses files need update? No
* Is there breaking changes for older versions? No
* Does this needs documentation? No (This _is_ documentation)

Author: Sanjay Dasgupta <sanjay.dasgupta@gmail.com>

Closes #2953 from sanjaydasgupta/zeppelin-3388 and squashes the following commits:

bb8aa0c [Sanjay Dasgupta] Changes to address Felix Cheung's review https://github.com/apache/zeppelin/pull/2953#pullrequestreview-116196552
7360b50 [Sanjay Dasgupta] Correcting deleted hyperlink urls
64e4d7e [Sanjay Dasgupta] Initial version of files for 3388

--- a/docs/_includes/themes/zeppelin/_navigation.html
+++ b/docs/_includes/themes/zeppelin/_navigation.html
@@ -63,6 +63,7 @@
                 <li><a href="{{BASE_PATH}}/usage/other_features/customizing_homepage.html">Customizing Zeppelin Homepage</a></li>
                 <li><a href="{{BASE_PATH}}/usage/other_features/notebook_actions.html">Notebook Actions</a></li>
                 <li><a href="{{BASE_PATH}}/usage/other_features/cron_scheduler.html">Cron Scheduler</a></li>
+                <li><a href="{{BASE_PATH}}/usage/other_features/zeppelin_context.html">Zeppelin Context</a></li>
                 <li role="separator" class="divider"></li>
                 <li class="title"><span>REST API</span></li>
                 <li><a href="{{BASE_PATH}}/usage/rest_api/interpreter.html">Interpreter API</a></li>
@@ -182,3 +183,4 @@
         </nav><!--/.navbar-collapse -->
       </div>
     </div>
+
