--- a/zeppelin-web/src/app/notebook/notebook-actionBar.html
+++ b/zeppelin-web/src/app/notebook/notebook-actionBar.html
@@ -252,9 +252,9 @@ limitations under the License.
         <button type="button"
                 class="btn btn-default btn-xs"
                 ng-show="collaborativeMode"
-                tooltip-placement="bottom" uib-tooltip="This note is viewed not only by you"
+                tooltip-placement="bottom" uib-tooltip="Users who watch this note: {{collaborativeModeUsers.join(', ')}}"
                 style="background-color: rgba(0,151,255,0.36)">
-          <i class="icon-eye"></i>
+          <i class="icon-eye"> {{collaborativeModeUsers.length}}</i>
         </button>
       </span>
 
