--- a/zeppelin-web/src/app/notebook/notebook-actionBar.html
+++ b/zeppelin-web/src/app/notebook/notebook-actionBar.html
@@ -59,7 +59,7 @@ limitations under the License.
               ng-hide="viewOnly"
               tooltip-placement="bottom" uib-tooltip="Enable/Disable for running"
               ng-disabled="revisionView">
-        <i ng-class="isAnableRun ? 'fa fa-lock' : 'fa fa-unlock'"></i>
+        <i ng-class="isEnableRun ? 'fa fa-lock' : 'fa fa-unlock'"></i>
       </button>
       <button type="button"
               class="btn btn-default btn-xs"
