--- a/zeppelin-web/src/app/notebook/notebook.html
+++ b/zeppelin-web/src/app/notebook/notebook.html
@@ -72,6 +72,11 @@ limitations under the License.
                    uib-tooltip="{{item.errorReason}}">
                 </i>
               </small>
+              <small ng-switch-when="YELLOW">
+                <i style="color: yellow; cursor: pointer" class="fa fa-circle"
+                   uib-tooltip="{{item.errorReason}}">
+                </i>
+              </small>
             </small>
           </div>
         </div>
