--- a/zeppelin-web/src/assets/styles/looknfeel/report.css
+++ b/zeppelin-web/src/assets/styles/looknfeel/report.css
@@ -58,6 +58,10 @@ body {
   visibility: hidden;
 }
 
+.noteAction .form-control-static2 > span {
+  visibility: visible;
+}
+
 .noteAction:hover span,
 .noteAction:hover button,
 .noteAction:hover form {
