[ZEPPELIN-3476] change description "auto-restart interpreter on cron execution"
Description "auto-restart interpreter on cron execution"  is does not quite fit in the sense.

Documentation

[ZEPPELIN-3476](https://issues.apache.org/jira/browse/ZEPPELIN-3476)

![cron_scheduler_dialog_box](https://user-images.githubusercontent.com/30798933/40646934-4d110526-6333-11e8-90d2-c4feaa1f2c3d.png)

Author: Savalek <def113@mail.ru>

Closes #2991 from Savalek/ZEPPELIN-3476 and squashes the following commits:

4916b0da9 [Savalek] [ZEPPELIN-3476] replace "close" on "stop"
d2e9c78ee [Savalek] [ZEPPELIN-3476] change description

Change-Id: Ic8a0d283268f843f0ec440b2203c027fea0ffb2b
(cherry picked from commit ee06cf030dd9ff83c971dfb9f47f24fb4aae55d4)
Signed-off-by: Renjith Kamath <rkamath@apache.org>

--- a/zeppelin-web/src/app/notebook/notebook-actionBar.html
+++ b/zeppelin-web/src/app/notebook/notebook-actionBar.html
@@ -282,7 +282,7 @@ limitations under the License.
                 </p>
               </div>
               <div>
-                <span>- auto-restart interpreter on cron execution </span>
+                <span>- After execution stop the interpreter </span>
                 <input type="checkbox"
                        ng-model="note.config.releaseresource"
                        ng-click="setReleaseResource(note.config.releaseresource)"/>
