--- a/zeppelin-web/src/assets/styles/looknfeel/report.css
+++ b/zeppelin-web/src/assets/styles/looknfeel/report.css
@@ -58,7 +58,7 @@ body {
   visibility: hidden;
 }
 
-.noteAction .form-control-static2 > span {
+.noteAction .form-control-title > span {
   visibility: visible;
 }
 
