--- a/zeppelin-web/src/app/notebook/paragraph/paragraph-control.html
+++ b/zeppelin-web/src/app/notebook/paragraph/paragraph-control.html
@@ -75,7 +75,7 @@ limitations under the License.
     <span class="{{selectedParagraphsIds.has(paragraph.id) ? 'icon-check checked-paragraph-check-button' : 'icon-plus'}}"
           tooltip-placement="top"
           style="cursor:pointer"
-          uib-tooltip="Select a paragraph"
+          uib-tooltip="{{selectedParagraphsIds.has(paragraph.id) ?  'Remove this paragraph from selection' : 'Add this paragraph to selection'}}"
           ng-click="toggleSelection(paragraph)"></span>
 
     <span class="dropdown navbar-right">
