--- a/_includes/themes/zeppelin/_navigation.html
+++ b/_includes/themes/zeppelin/_navigation.html
@@ -14,7 +14,7 @@
     </div>
     <nav class="navbar-collapse collapse" role="navigation">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/docs/0.7.3/install/install.html">Quick Start</a></li>
+        <li><a href="/docs/0.8.0/install/install.html">Quick Start</a></li>
         <!-- Download -->
         <li class="docs">
           <a href="#" data-toggle="dropdown" class="dropdown-toggle">Download<b class="caret"></b></a>
@@ -28,6 +28,7 @@
           <a href="#" data-toggle="dropdown" class="dropdown-toggle">Docs<b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li class="title"><span><b>Release</b><span></li>
+            <li><a href="/docs/0.8.0">0.8.0</a></li>
             <li><a href="/docs/0.7.3">0.7.3</a></li>
             <li><a href="/docs/0.7.2">0.7.2</a></li>
             <li><a href="/docs/0.6.2">0.6.2</a></li>
@@ -35,7 +36,7 @@
             <li><a href="documentation.html">Older Versions</a></li>
             <li role="separator" class="divider"></li>
               <li class="title"><span><b>Snapshot&nbsp;(development)</b><span></li>
-            <li><a href="/docs/0.8.0-SNAPSHOT">0.8.0-SNAPSHOT</a></li>
+            <li><a href="/docs/0.9.0-SNAPSHOT">0.9.0-SNAPSHOT</a></li>
           </ul>
         </li>
 
@@ -81,7 +82,7 @@
     </div>
     <div class="border row">
       <div class="col-md-12 col-sm-12 col-xs-12 text-center newBtn" style="margin-top:8px;">
-        <a href="/docs/0.7.3/install/install.html" class="btn btn-primary btn-lg" role="button"
+        <a href="/docs/0.8.0/install/install.html" class="btn btn-primary btn-lg" role="button"
            style="margin:5px 25px 5px 25px;font-size:15px;">
           GET STARTED
         </a>
