--- a/_includes/themes/zeppelin/_navigation.html
+++ b/_includes/themes/zeppelin/_navigation.html
@@ -14,7 +14,7 @@
     </div>
     <nav class="navbar-collapse collapse" role="navigation">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/docs/0.8.0/install/install.html">Quick Start</a></li>
+        <li><a href="/docs/0.8.0/quickstart/install.html">Quick Start</a></li>
         <!-- Download -->
         <li class="docs">
           <a href="#" data-toggle="dropdown" class="dropdown-toggle">Download<b class="caret"></b></a>
@@ -82,7 +82,7 @@
     </div>
     <div class="border row">
       <div class="col-md-12 col-sm-12 col-xs-12 text-center newBtn" style="margin-top:8px;">
-        <a href="/docs/0.8.0/install/install.html" class="btn btn-primary btn-lg" role="button"
+        <a href="/docs/0.8.0/quickstart/install.html" class="btn btn-primary btn-lg" role="button"
            style="margin:5px 25px 5px 25px;font-size:15px;">
           GET STARTED
         </a>
