[ZEPPELIN-3665] fix notebook name. add 'unicode-bidi: plaintext'

--- a/zeppelin-web/src/app/notebook/notebook.css
+++ b/zeppelin-web/src/app/notebook/notebook.css
@@ -184,7 +184,8 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  direction: ltr;
+  direction: rtl;
+  unicode-bidi: plaintext;
   text-align: left;
   font-size: 29px;
   padding-top: 7px;
